[workspace]
# authors = ["Chevdor <chevdor@gmail.com>"]
# name = "submig"
# version = "0.0.0"
# edition = "2021"
# description = "submig is a cli"
# homepage = "https://github.com/Chevdor/submig"
# keywords = ["Chevdor"]
# license = "MIT"
# readme = "README.md"
# repository = "https://github.com/Chevdor/submig"

members = [
    "cli",
    "lib",
]
