[package]
authors = ["Chevdor <chevdor@gmail.com>"]
name = "submig"
version = "0.0.2"
edition = "2021"
description = "submig is a cli"
homepage = "https://github.com/Chevdor/submig"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/submig"

[dependencies]
assert_cmd = "2.0"
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
submig-lib = { version = ">=0", path = "../lib/" }
