[package]
name = "submig"
version.workspace = true
edition.workspace = true
authors.workspace = true

description = "submig is a cli"
homepage = "https://github.com/Chevdor/submig"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/submig"

[dependencies]
assert_cmd = "2.0.16"
env_logger = "0.11.6"
log = "0.4.25"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
submig-lib = { version = ">=0", path = "../lib/" }
