[package]
authors = ["Chevdor <chevdor@gmail.com>"]
name = "submig-lib"
version = "0.0.1"
edition = "2021"
description = "submig is a lib"
homepage = "https://github.com/Chevdor/submig"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/submig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }
regex = "1.8.1"
